--- a/Fundraising/wwwroot/CMS/index.html
+++ b/Fundraising/wwwroot/CMS/index.html
@@ -149,11 +149,11 @@
                                                 <thead>
                                                     <tr class="">
                                                         <th class="col-1">排名</th>
-                                                        <th>提案名稱</th>
-                                                        <th>目前金額</th>
-                                                        <th class="col-2">目前進度</th>
-                                                        <th class="col-2">贊助人數</th>
-                                                        <th class="col-2">操作</th>
+                                                        <th class="col-7">提案名稱</th>
+                                                        <th class="col-1">目前金額</th>
+                                                        <th class="col-1">目前進度</th>
+                                                        <th class="col-1">贊助人數</th>
+                                                        <th class="col-7">操作</th>
                                                     </tr>
                                                 </thead>
                                                 <div>
