--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -47,7 +47,7 @@
 
             <!-- <input type="button" value="test" onclick="test()"> -->
 
-            <div class="tab-content container">
+            <div class="tab-content container mb-5">
                 <!-- 專案大綱 -->
                 <div style="width: 105%; position: relative; right: 30px;"
                     class="card tab-pane fade show active lidivborder" id="outline" role="tabpanel"
