--- a/Fundraising/wwwroot/CMS/Olist.html
+++ b/Fundraising/wwwroot/CMS/Olist.html
@@ -86,7 +86,7 @@
                                                             <input type="text" v-model="input.productTitle" style="padding: 5px;">
                                                         </div>
                                                         <div class="ml-3">
-                                                            <a class="btn btn-success" v-on:click="inputRest">重製</a>
+                                                            <a class="btn btn-success" v-on:click="inputRest">清除</a>
                                                         </div>
                                                 </fieldset>
                                             </form>
