--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -189,8 +189,8 @@
             <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider5.png" alt=""></a></div>
         </div>
 
-        <div class="container px-4 py-5" id="mySelected">
-            <h2 class="pb-2">
+        <div class="p-4 my-5 m-auto card" id="mySelected" style="min-width:80%;max-width:80%">
+            <h2 class="pb-2" style="border-bottom: 3px solid #09b478;">
                 平台精選
                 <a href="#" class="more">
                     More
@@ -203,9 +203,7 @@
                    v-for="item in featuredList">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                            <svg class="bi" width="1em" height="1em">
-                                <use xlink:href="#collection" />
-                            </svg>
+
                         </div>
 
                         <!-- 資訊卡 -->
@@ -249,28 +247,8 @@
                 </div>
             </div>
         </div>
-
-        <!--<div class="container px-4 py-5" id="mySelected">
-            <h2 class="pb-2 border-bottom">
-                近期新增
-                <a href="#" style="font-size: 20px; float: right; text-decoration: none; color:black;">More ></a>
-            </h2>
-            <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
-
-                <a href="#" style="text-decoration: none; color: black;">
-                    <div class="feature col">
-                        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                            <svg class="bi" width="1em" height="1em">
-                                <use xlink:href="#collection" />
-                            </svg>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>-->
-
-        <div class="container px-4 py-5" id="mySelected">
-            <h2 class="pb-2">
+        <div class="p-4 my-5 card m-auto " id="mySelected" style="min-width:80%;max-width:80%;">
+            <h2 class="pb-2" style="border-bottom: 3px solid #09b478;">
                 近期新增
                 <a href="#" class="more">More ></a>
             </h2>
@@ -279,15 +257,11 @@
                    v-for="item in recentList">
                     <div class="feature col">
                         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                            <svg class="bi" width="1em" height="1em">
-                                <use xlink:href="#collection" />
-                            </svg>
                         </div>
 
                         <!-- 資訊卡 -->
                         <div class="selectphotodiv" :style="{'background-image':'url(' + item.coverphoto + ')'}">
                         </div>
-
                         <!--<div class="selectedimgdiv">
                             <img class="selectedimg" src="./page.png" alt="">
                         </div>-->
