--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -28,7 +28,7 @@
     <div class="thisproduct">
       <div class="container">
         <!-- 標題 -->
-        <h1 class="pb-4">{{fliterList[0].producttitle}}</h1>
+        <h1 class="py-3">{{fliterList[0].producttitle}}</h1>
         <div class="row">
           <!--左邊欄位-->
           <div class="col-sm-7">
