修plan 贊助紀錄

--- a/Fundraising/wwwroot/ProductPage/orderpay.html
+++ b/Fundraising/wwwroot/ProductPage/orderpay.html
@@ -230,7 +230,7 @@
                                 <div class="mb-2 form-check">
                                     <input class="testcheckbox form-check-input" type="checkbox" id="gridCheck" required>
                                     <label class="form-check-label" for="gridCheck">
-                                        我已閱讀並同意咱的服務條款與隱私權政策。
+                                        我已閱讀並同意 needU 服務條款與隱私權政策。
                                     </label>
                                 </div>
                                 <div class="col-12">
