--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -172,6 +172,15 @@
         .container h2{
             border-bottom: 3px solid #09b478;
         }
+
+        .card {
+            box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+            width: 80%;
+            transition: 0.5s;
+            border: 0;
+            border-radius: 0.55rem;
+            position: relative;
+        }
     </style>
 
 </head>
