--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -137,6 +137,15 @@
             right: 360px;
             bottom: 145px;
         }
+
+        .card {
+            box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+            width: 80%;
+            transition: 0.5s;
+            border: 0;
+            border-radius: 0.55rem;
+            position: relative;
+        }
     </style>
 </head>
 
