--- a/Fundraising/wwwroot/ProductPage/creditcard.html
+++ b/Fundraising/wwwroot/ProductPage/creditcard.html
@@ -29,14 +29,14 @@
             overflow-x: hidden;
         }
 
-        .container {
-            margin: 60px;
+        /* .container {
+
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #f1f3f5;
-        }
+
+        }*/
 
         .form {
             max-width: 800px;
@@ -101,11 +101,11 @@
 </head>
 
 <body>
-    <div class="container" style="height:0px;">
-        <button onclick="testinput()" style="text-align: center;">TEST</button>
+    <div class="text-center">
+        <button onclick="testinput()" class="btn">+</button>
     </div>
-    <form class="container app">
-        <div class="form login">
+    <form class=" app p-5 pt-0">
+        <div class="form login  mx-auto">
             <div>
                 <p style="text-align: center; font-size: 20px;">※ 信用卡交易資訊 Credit Card Information</p>
             </div>
