--- a/Fundraising/wwwroot/CMS/Employee.html
+++ b/Fundraising/wwwroot/CMS/Employee.html
@@ -393,19 +393,19 @@
                 },
                 addemployeeText: function () {
                     app.addemployee = {
-                        account: "test",
-                        password: "test",
-                        name: "test",
-                        email: 'test@gmail.com',
+                        account: "mashow",
+                        password: "mashow",
+                        name: "馬修",
+                        email: 'mashow@gmail.com',
                         phone: "0987654321",
                         position: "2",
-                        sexy: "0",
+                        sexy: "1",
                         status: 1,
                     }
 
                 },
                 enterText: function () {
-                    app.input.employeeinfo = "123";
+                    app.input.employeeinfo = "馬修";
 
                 },
                 inputRest: function () {
