--- a/Fundraising/wwwroot/CMS/Olist.html
+++ b/Fundraising/wwwroot/CMS/Olist.html
@@ -113,7 +113,7 @@
                                                             <td v-cloak>{{item.planTitle}}</td>
                                                             <td v-cloak>{{item.purchaseTime}}</td>
                                                             <td v-cloak>{{item.orderStateId}}</td>
-                                                            <td v-cloak v-if="item.orderStateId == '取消申請中'"><a class="btn btn-outline-success"
+                                                            <td v-cloak v-if="item.orderStateId == '取消申請中'"><a class="btn btn-danger"
                                                                 href='./checkrefund.html'
                                                                 v-on:click="checkOlist(item.orderId)">編輯</a>
                                                         </td>
@@ -215,8 +215,8 @@
                     sessionStorage.setItem('orderId', index)
                 },
                 enterText:function(){
-                    app.input.orderId = "123";
-                    app.input.productTitle= "123";
+                    app.input.orderId = "69";
+                    app.input.productTitle= "小木屋貓咪樂園";
                     
                 },
                 inputRest:function(){
