--- a/Fundraising/wwwroot/CMS/member.html
+++ b/Fundraising/wwwroot/CMS/member.html
@@ -270,8 +270,8 @@
                         })
                 },
                 enterText:function(){
-                    app.input.userId = "123";
-                    app.input.userinfo= "123";
+                    app.input.userId = "49";
+                    app.input.userinfo= "陳小黑";
                     
                 },
                 inputRest:function(){
