--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -235,7 +235,7 @@
 
 
     <script src="../layout/layout.js"></script>
-    <!--<script src="microsoft.cognitiveservices.speech.sdk.bundle.js"></script>-->
+    <script src="microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <!--<script>
         // status fields and start button in UI
         var phraseDiv;
