--- a/Fundraising/wwwroot/MemberCentre/ProjectManage.html
+++ b/Fundraising/wwwroot/MemberCentre/ProjectManage.html
@@ -126,7 +126,7 @@
               <!-- 狀態 -->
               <td>{{order.orderStateId}}</td>
               <!-- 回饋方案 -->
-              <td>{{order.planTitle}}</td>
+              <td class="text-start">{{order.planTitle}}</td>
               <!-- 收件人姓名 -->
               <td>{{order.recipientName}}</td>
               <!-- 贊助金額 -->
