--- a/Fundraising/wwwroot/CMS/Odetails.html
+++ b/Fundraising/wwwroot/CMS/Odetails.html
@@ -49,7 +49,7 @@
 
                     <!-- 結束 側邊欄位 -->
                     <!--主要內容-->
-                    <div class="col-10">
+                    <div class="col-10" style="margin-bottom:50px; ">
                         <div class="px-3 ">
 
                             <div class="item-style bg-white mb-5">
