--- a/Fundraising/wwwroot/ProductPage/comments.html
+++ b/Fundraising/wwwroot/ProductPage/comments.html
@@ -123,7 +123,7 @@
                           </li>
                           <li class="nav-item" style="padding-left: 80px">
                               <a class="nav-link" href="./comments.html">
-                                  <span style="font-size: 18px">留言 {{fliterList.length}}</span>
+                                  <span style="font-size: 18px; font-weight: 900">留言 {{fliterList.length}}</span>
                               </a>
                           </li>
                       </ul>
