--- a/Fundraising/wwwroot/ProductPage/faq.html
+++ b/Fundraising/wwwroot/ProductPage/faq.html
@@ -69,7 +69,7 @@
                             <a class="nav-link" href="./product.html"><span style="font-size:18px">專案內容</span></a>
                         </li>
                         <li class="nav-item" style="padding-left:80px">
-                            <a class="nav-link" href="./faq.html"><span style="font-size:18px">常見問題 {{tolfaq}}</span></a>
+                            <a class="nav-link" href="./faq.html"><span style="font-size: 18px; font-weight: 900">常見問題 {{tolfaq}}</span></a>
                         </li>
                         <li class="nav-item" style="padding-left:80px">
                             <a class="nav-link" href="./comments.html"><span style="font-size:18px">留言 {{tolcomment}}</span></a>
