--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -143,7 +143,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="./product.html"
-                  ><span style="font-size: 18px">專案內容</span></a
+                  ><span style="font-size: 18px; font-weight:900">專案內容</span></a
                 >
               </li>
               <li class="nav-item" style="padding-left: 80px">
