--- a/Fundraising/wwwroot/CMS/Plist.html
+++ b/Fundraising/wwwroot/CMS/Plist.html
@@ -213,7 +213,8 @@
                 },
                 enterText:function(){
                     app.input.productId = "";
-                    app.input.productTitle= "貓空漫步";
+                    app.input.productTitle = "喵空漫步";
+                    app.input.productStateId = "全部"
                     
                 },
                 inputRest:function(){
