--- a/Fundraising/wwwroot/CMS/index.html
+++ b/Fundraising/wwwroot/CMS/index.html
@@ -118,7 +118,7 @@
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col mr-2">
                                                     <div class="font-weight-bold text-success text-uppercase mb-1">
-                                                        會員總人數</div>
+                                                        會員人數</div>
                                                     <div v-cloak class="h2 mb-0 font-weight-bold ">
                                                         {{mydata.memberTotal}}
                                                     </div>
