--- a/Fundraising/wwwroot/CMS/login.html
+++ b/Fundraising/wwwroot/CMS/login.html
@@ -13,14 +13,13 @@
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/mystyle.css">
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/logincheck.js"></script>
 
@@ -32,7 +31,7 @@
     </style>
 </head>
 
-<body class="bg-white" id="app">
+<body class="bg-white" id="">
     <div id="app">
         <div class="container text-center pt-5">
             <img src="../img/brand.png" alt="" style="height: 100px; width: 300px;">
@@ -41,7 +40,7 @@
                 <div class="col-lg-6 bg-white  item-style" style="max-width: 430px;">
                     <div class="p-4">
                         <div class="text-center">
-                            <h1 class="h4 mb-4 font-weight-bold">登入頁面</h1>
+                            <h1 class="h4 mb-4 font-weight-bold" onclick=app.enterText()>登入頁面</h1>
                         </div>
                         <form class="user">
                             <div class="form-group">
@@ -77,15 +76,12 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <script>
-        const { createApp } = Vue
-
-        createApp({
-            data() {
-                return {
-                    login: {
-                        employeeAccount: "",
-                        employeePassword: "",
-                    }
+        var app = new Vue({
+            el: '#app',
+            data: {
+                login: {
+                    employeeAccount: "",
+                    employeePassword: "",
                 }
             },
             methods: {
@@ -100,13 +96,16 @@
                             window.location = "./index.html"
                         }
                     })
-                }
-            },
+                },
+                enterText: function () {
+                    app.login.employeeAccount = "admin";
+                    app.login.employeePassword = "admin";
 
+                },
+            },
             mounted() {
-
-            },
-        }).mount('#app')
+            }
+        })
 
     </script>
 
