--- a/Fundraising/wwwroot/MemberCentre/UserInfo.html
+++ b/Fundraising/wwwroot/MemberCentre/UserInfo.html
@@ -75,7 +75,7 @@
             id="ProfileImg"
           />
           <div class="ms-4">
-            <h4>{{userdata.userName}}</h4>
+            <h4 style="font-weight:600">{{userdata.userName}}</h4>
             <p>
               已贊助計畫：{{userdata.orderCNT}} /
               已發起計畫：{{userdata.productCNT}}
