--- a/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
@@ -33,7 +33,7 @@
         position: relative;
       }
     </style>
-    <title>訂單修改</title>
+    <title>回饋寄送資訊修改</title>
   </head>
   <body>
     <div class="container" id="app">
@@ -122,7 +122,7 @@
 
         <!-- 資料修改 -->
         <div class="m-3 mx-auto" style="width: 60%">
-          <h4 class="h3">寄送資訊修改</h4>
+            <h4 class="h3" style="font-weight:600">回饋寄送資訊修改</h4>
           <!-- 修改表單 -->
           <form class="row">
             <!-- 姓名 -->
