--- a/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
+++ b/Fundraising/wwwroot/MemberCentre/UserOrderDetail.html
@@ -53,9 +53,8 @@
             <a href="#"
               ><img
                 :src="myorder.productPhoto"
-                class="img-fluid rounded-start p-2 pt-3"
+                class="img-fluid rounded-start"
                 alt="..."
-                style="height: 200px; object-fit: cover"
             /></a>
           </div>
 
@@ -95,7 +94,7 @@
                   </p>
                 </div>
               </div>
-              <h5 class="text-end me-2" style="font-weight: 600">
+              <h5 class="text-end me-2 text-decoration-underline">
                 贊助金額: $ {{myorder.planPrice + myorder.addSponsorship}}
               </h5>
             </div>
@@ -123,7 +122,7 @@
 
         <!-- 資料修改 -->
         <div class="m-3 mx-auto" style="width: 60%">
-          <h4 class="h3" style="font-weight: 600">回饋寄送資訊修改</h4>
+            <h4 class="h3" style="font-weight:600">回饋寄送資訊修改</h4>
           <!-- 修改表單 -->
           <form class="row">
             <!-- 姓名 -->
