--- a/Fundraising/wwwroot/CMS/Orefund.html
+++ b/Fundraising/wwwroot/CMS/Orefund.html
@@ -185,7 +185,8 @@
                 input: {
                     orderId: "",
                     productTitle: ""
-                }
+                },
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -269,6 +270,10 @@
 
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
+                })
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
+                    
                 })
             }
         })
