--- a/Fundraising/wwwroot/CMS/PdetailsView.html
+++ b/Fundraising/wwwroot/CMS/PdetailsView.html
@@ -292,7 +292,8 @@
                 productinfo: [],
                 plan: [],
                 Question: [],
-                employeeinfo: []
+                employeeinfo: [],
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -351,6 +352,10 @@
 
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
+                })
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
+                    
                 })
             }
         })
