--- a/Fundraising/wwwroot/CMS/Preview.html
+++ b/Fundraising/wwwroot/CMS/Preview.html
@@ -163,7 +163,8 @@
                 input: {
                     principalName: "",
                     title: ""
-                }
+                },
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -239,6 +240,10 @@
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
+                })
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
+                    
                 })
             }
         })
