--- a/Fundraising/wwwroot/CMS/checkrefund.html
+++ b/Fundraising/wwwroot/CMS/checkrefund.html
@@ -208,7 +208,8 @@
             data: {
                 LoaderVisiable: false,
                 odetailsinfo: [],
-                employeeinfo: []
+                employeeinfo: [],
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -257,6 +258,9 @@
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
+                })
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
                 })
             }
         })
