--- a/Fundraising/wwwroot/CMS/profile.html
+++ b/Fundraising/wwwroot/CMS/profile.html
@@ -145,6 +145,7 @@
             data: {
                 LoaderVisiable: false,
                 employeeinfo: [],
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -232,8 +233,13 @@
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
-                    setTimeout(() => loader.hide(), 0.5 * 1000);
+                    setTimeout(() => loader.hide(), 300);
                 })
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
+
+                })
+
             }
         })
     </script>
