--- a/Fundraising/wwwroot/CMS/Employee.html
+++ b/Fundraising/wwwroot/CMS/Employee.html
@@ -13,9 +13,8 @@
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
@@ -34,7 +33,7 @@
         <div class="container-fluid p-0 bg-theme" id="page-top">
             <!-- 導覽列 -->
             <div id="myheader" class="bg-white"
-                style="background-image: url(../img/headerbackgroud.png); background-size: cover;">
+                 style="background-image: url(../img/headerbackgroud.png); background-size: cover;">
 
             </div>
             <!-- 結束 導覽列 -->
@@ -66,8 +65,8 @@
                                                     <div class="d-flex py-3">
                                                         <div class="mx-3">
                                                             <select name="" id=""
-                                                                style="height: 38px; border-radius: 5px;"
-                                                                v-model="input.employeestatus">
+                                                                    style="height: 38px; border-radius: 5px;"
+                                                                    v-model="input.employeestatus">
                                                                 <option value="任職狀態">任職狀態</option>
                                                                 <option value="在職">在職</option>
                                                                 <option value="離職">離職</option>
@@ -77,8 +76,8 @@
                                                         <div class="pr-3">
 
                                                             <input type="text" v-model="input.employeeinfo"
-                                                                placeholder="搜尋員工姓名 / Email / 電話"
-                                                                style="min-width: 300px; height: 100%;">
+                                                                   placeholder="搜尋員工姓名 / Email / 電話"
+                                                                   style="min-width: 300px; height: 100%;">
                                                         </div>
                                                         <div class="ml-3">
                                                             <a class="btn btn-success" v-on:click="inputRest">清除</a>
@@ -90,7 +89,7 @@
                                         <div class="py-0 col-12 mb-5">
                                             <div class="text-right pr-3">
                                                 <button type="button" class="btn btn-success px-4 mb-3"
-                                                    data-toggle="modal" data-target="#staticBackdrop">
+                                                        data-toggle="modal" data-target="#staticBackdrop">
                                                     新增
                                                 </button>
                                             </div>
@@ -114,8 +113,9 @@
                                                         <td v-cloak>{{item.sexy}}</td>
                                                         <td v-cloak>{{item.position}}</td>
                                                         <td v-cloak>{{item.status}}</td>
-                                                        <td><a class="btn btn-primary" data-toggle="modal"
-                                                                data-target="#editmodal" v-on:click="edit(item)">編輯</a>
+                                                        <td>
+                                                            <a class="btn btn-primary" data-toggle="modal"
+                                                               data-target="#editmodal" v-on:click="edit(item)">編輯</a>
                                                         </td>
                                                     </tr>
                                                     <!-- <tr>
@@ -135,40 +135,38 @@
                                 </div>
                             </div>
                             <!-- Button trigger modal -->
-
-
                             <!-- Modal -->
                             <!-- 新增 -->
                             <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false"
-                                tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                 tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered " style=" max-width: 550px;">
                                     <div class="modal-content" style="border-radius: 5px; border: 0px;">
                                         <div class="modal-body px-4">
                                             <label for="" onclick=app.addemployeeText()>帳號*</label> <br>
                                             <input type="text" class="w-100 mb-1" name="account" placeholder="請輸入6位英數字"
-                                                v-model="addemployee.account">
+                                                   v-model="addemployee.account">
                                             <label for="">密碼*</label> <br>
                                             <input type="password" class="w-100 mb-1" name="password"
-                                                placeholder="請輸入6位數字碼" v-model="addemployee.password">
+                                                   placeholder="請輸入6位數字碼" v-model="addemployee.password">
                                             <label for="">姓名*</label> <br>
                                             <input type="text" class="w-100 mb-1" name="name" placeholder="輸入姓名"
-                                                required v-model="addemployee.name">
+                                                   required v-model="addemployee.name">
                                             <label for="">Email</label> <br>
                                             <input type="text" class="w-100 mb-1" name="Email" placeholder="輸入電子信箱"
-                                                v-model="addemployee.email">
+                                                   v-model="addemployee.email">
                                             <label for="">電話</label> <br>
                                             <input type="text" class="w-100 mb-1" name="phone" placeholder="輸入電話"
-                                                v-model="addemployee.phone">
+                                                   v-model="addemployee.phone">
                                             <label for="">性別</label> <br>
                                             <input type="radio" value=1 id="man" name="sexy" checked
-                                                v-model="addemployee.sexy">
+                                                   v-model="addemployee.sexy">
                                             <label for="man" class="mr-3">男</label>
                                             <input type="radio" value=0 id="woman" name="sexy"
-                                                v-model="addemployee.sexy">
+                                                   v-model="addemployee.sexy">
                                             <label for="woman">女</label><br>
                                             <label for="">職位</label> <br>
                                             <select name="positions" id="" class="mb-1 w-100"
-                                                v-model="addemployee.position">
+                                                    v-model="addemployee.position">
                                                 <option value="" selected disabled>請選擇</option>
                                                 <option value="1">主管</option>
                                                 <option value="2">行政人員</option>
@@ -178,44 +176,48 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-outline-success" data-dismiss="modal"
-                                                v-on:click="opensweet">儲存</button>
+                                                    v-on:click="opensweet">
+                                                儲存
+                                            </button>
                                             <button type="button" class="btn btn-outline-danger"
-                                                data-dismiss="modal">取消</button>
+                                                    data-dismiss="modal">
+                                                取消
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <!-- 編輯 -->
                             <div class="modal fade" id="editmodal" data-backdrop="static" data-keyboard="false"
-                                tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                 tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered " style=" max-width: 550px;">
                                     <div class="modal-content" style="border-radius: 5px; border: 0px;">
                                         <div class="modal-body px-4">
                                             <label for="">帳號*</label> <br>
                                             <input type="text" class="w-100 mb-1" name="account" placeholder="請輸入6位英數字"
-                                                v-model="editemployee.account" disabled>
+                                                   v-model="editemployee.account" disabled>
                                             <label for="">密碼*</label> <br>
                                             <input type="password" class="w-100 mb-1" name="password"
-                                                placeholder="請輸入6位數字碼" v-model="editemployee.password">
+                                                   placeholder="請輸入6位數字碼" v-model="editemployee.password">
                                             <label for="">姓名*</label> <br>
                                             <input type="text" class="w-100 mb-1" name="name" placeholder="輸入姓名"
-                                                required v-model="editemployee.name">
+                                                   required v-model="editemployee.name">
                                             <label for="">Email</label> <br>
                                             <input type="text" class="w-100 mb-1" name="Email" placeholder="輸入電子信箱"
-                                                v-model="editemployee.email">
+                                                   v-model="editemployee.email">
                                             <label for="">電話</label> <br>
                                             <input type="text" class="w-100 mb-1" name="phone" placeholder="輸入電話"
-                                                v-model="editemployee.phone">
+                                                   v-model="editemployee.phone">
                                             <label for="">性別</label> <br>
                                             <input type="radio" value="男" id="man" name="sexy" checked
-                                                v-model="editemployee.sexy" disabled>
+                                                   v-model="editemployee.sexy" disabled>
                                             <label for="man" class="mr-3">男</label>
                                             <input type="radio" value="女" id="woman" name="sexy"
-                                                v-model="editemployee.sexy" disabled>
+                                                   v-model="editemployee.sexy" disabled>
                                             <label for="woman">女</label><br>
                                             <label for="">職位</label> <br>
                                             <select name="positions" id="" class="mb-1 w-100"
-                                                v-model="editemployee.position">
+                                                    v-model="editemployee.position">
                                                 <option value="" selected disabled>請選擇</option>
                                                 <option value="主管">主管</option>
                                                 <option value="行政人員">行政人員</option>
@@ -224,7 +226,7 @@
                                             </select><br>
                                             <label for="">任職狀態</label> <br>
                                             <select name="positions" id="" class="mb-1 w-100"
-                                                v-model="editemployee.status">
+                                                    v-model="editemployee.status">
                                                 <option value="" selected disabled>請選擇</option>
                                                 <option value="在職">在職</option>
                                                 <option value="離職">離職</option>
@@ -234,9 +236,13 @@
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-outline-success" data-dismiss="modal"
-                                                v-on:click="sendEdit">修改</button>
+                                                    v-on:click="sendEdit">
+                                                修改
+                                            </button>
                                             <button type="button" class="btn btn-outline-danger"
-                                                data-dismiss="modal">取消</button>
+                                                    data-dismiss="modal">
+                                                取消
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -293,7 +299,8 @@
                 },
                 editemployee: {
 
-                }
+                },
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -442,7 +449,7 @@
                 }
 
             },
-            mounted() {
+            async mounted() {
                 let loader = this.$loading.show({
                     loader: 'dots'
                 });
@@ -451,7 +458,11 @@
                     this.employeeinfo = res.data
                     // console.log(this.employeeinfo)
                 })
-                axios.get("/api/back/Employees/").then(res => {
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
+
+                })
+                await axios.get("/api/back/Employees/").then(res => {
 
                     this.employeeList = res.data
                     setTimeout(() => loader.hide(), 300)
