--- a/Fundraising/wwwroot/CMS/member.html
+++ b/Fundraising/wwwroot/CMS/member.html
@@ -13,9 +13,8 @@
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
@@ -33,8 +32,8 @@
         <div class="container-fluid p-0 bg-theme" id="page-top">
             <!-- 導覽列 -->
             <div id="myheader" class="bg-white"
-                style="background-image: url(../img/headerbackgroud.png); background-size: cover;"
-                style="overflow-x: auto;max-height: 750px;">
+                 style="background-image: url(../img/headerbackgroud.png); background-size: cover;"
+                 style="overflow-x: auto;max-height: 750px;">
 
             </div>
             <!-- 結束 導覽列 -->
@@ -43,7 +42,7 @@
                     <!-- 側邊欄位 -->
 
                     <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
-                    style="overflow-x: auto;max-height: 750px;">
+                        style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -88,7 +87,7 @@
                                                         <th class="col-3">Email</th>
                                                         <th class="col-2">電話</th>
                                                         <th class="col-2">加入時間</th>
-                                                        <th >操作</th>
+                                                        <th>操作</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody class="">
@@ -100,8 +99,8 @@
                                                         <td v-cloak>{{item.createDate.substring(0,10)}}</td>
                                                         <td v-cloak>
                                                             <a class="btn btn-outline-success" data-toggle="modal"
-                                                                data-target="#exampleModal"
-                                                                v-on:click="getuserinfo(item.userId)">詳細內容 </a>
+                                                               data-target="#exampleModal"
+                                                               v-on:click="getuserinfo(item.userId)">詳細內容 </a>
                                                         </td>
 
                                                     </tr>
@@ -122,8 +121,6 @@
                                 </div>
                             </div>
                             <!-- Button trigger modal -->
-
-
                             <!-- Modal -->
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered  ">
@@ -136,13 +133,14 @@
                                         </div>
                                         <div class="modal-body px-3">
                                             <div class="row  justify-content-center mb-3 px-5">
-                                                <div class="col-4 p-0"><img :src="userinfo.userPhoto"
-                                                        style="width: 150px;height: 150px;object-fit: cover;border-radius: 50%;" alt="">
+                                                <div class="col-4 p-0">
+                                                    <img :src="userinfo.userPhoto"
+                                                         style="width: 150px;height: 150px;object-fit: cover;border-radius: 50%;" alt="">
                                                     <div class="h-100">
                                                         <label for="">簡介:</label><br>
                                                         <p style="border: 1px #80808057 solid;
                                                         border-radius: 5px;
-                                                        padding: 5px; min-height: 180px;" >{{userinfo.userIntro}}</p>
+                                                        padding: 5px; min-height: 180px;">{{userinfo.userIntro}}</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-8 ">
@@ -206,7 +204,7 @@
         </a>
         <!-- 登出彈跳視窗-->
         <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
+             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -240,10 +238,11 @@
                 userlist: [],
                 userinfo: [],
                 employeeinfo: [],
-                input:{
-                    userId:"",
-                    userinfo:""
+                input: {
+                    userId: "",
+                    userinfo: ""
                 },
+                gettodoitem: {}
             },
             components: {
                 Loading: VueLoading
@@ -269,57 +268,61 @@
                             console.log(response.data)
                         })
                 },
-                enterText:function(){
+                enterText: function () {
                     app.input.userId = "49";
-                    app.input.userinfo= "陳小黑";
-                    
+                    app.input.userinfo = "陳小黑";
+
                 },
-                inputRest:function(){
+                inputRest: function () {
                     app.input.userId = "";
-                    app.input.userinfo= "";
+                    app.input.userinfo = "";
                 }
             },
-            computed:{
-                userIdChange(){
-                    if(this.input.userId){
-                        return this.userlist.filter(item=>{
+            computed: {
+                userIdChange() {
+                    if (this.input.userId) {
+                        return this.userlist.filter(item => {
                             return item.userId.indexOf(this.input.userId) !== -1
                         })
-                    }else{
+                    } else {
                         return this.userlist
                     }
                 },
-                userinfoChange(){
-                    if(this.input.userinfo){
-                        return this.userIdChange.filter(item=>{
-                             if( item.userName.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1){
+                userinfoChange() {
+                    if (this.input.userinfo) {
+                        return this.userIdChange.filter(item => {
+                            if (item.userName.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1) {
                                 return item.userName.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1
-                            }else if(item.userEmail.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1){
+                            } else if (item.userEmail.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1) {
                                 return item.userEmail.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1
-                            }else if(item.userPhone.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1){
+                            } else if (item.userPhone.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1) {
                                 return item.userPhone.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1
-                            }   
+                            }
                         })
-                    }else{
+                    } else {
                         return this.userIdChange
                     }
                 }
             },
-            mounted() {
+            async mounted() {
                 let loader = this.$loading.show({
                     loader: 'dots'
                 });
-                axios.get('/api/back/users')
-                    .then((response) => {
-                        this.userlist = response.data
-                        setTimeout(() => loader.hide(), 0.5 * 1000);
-                        // console.log(response.data.length)
-                    })
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
 
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
                 })
+                axios.get('/api/back/gettodoitem').then(res => {
+                    this.gettodoitem = res.data
+
+                })
+                await axios.get('/api/back/users')
+                    .then((response) => {
+                        this.userlist = response.data
+                        setTimeout(() => loader.hide(), 500);
+                        // console.log(response.data.length)
+                    })
             }
         })
     </script>
